--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,24 +27,24 @@
 #spring.datasource.username=ifp
 #spring.datasource.password=infopower
 #\u6D4B\u8BD5\u73AF\u58832
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://117.50.62.217:1433;DatabaseName=IE_AWB2CTM_UAT
-spring.datasource.username=merck_user1
-spring.datasource.password=help7575
-
-logging.level.org.springframework=info
-spring.datasource.hikari.connection-timeout=60000
-spring.datasource.hikari.maximum-pool-size=120
-server.port=9099
-server.address=0.0.0.0
-#\u5F00\u542F\u5BF9AOP\u7684\u652F\u6301
-spring.aop.auto=true
-#\u8BBE\u7F6E\u4EE3\u7406\u6A21\u5F0F true\uFF08cglib\uFF09 false(java JDK\u4EE3\u7406)
-spring.aop.proxy-target-class=true
-scheduled.cron=0 0/30 * * * ?
-mybatis.mapper-locations = classpath:mapper/*.xml
-#mybatis.mapper-locations = classpath:com/*/model/*.xml
-mybatis.config-location = classpath:mybatis-config.xml
-#mybatis.type-aliases-package = com.*.model
-#spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://117.50.62.217:1433;DatabaseName=IE_AWB2CTM_UAT
+#spring.datasource.username=merck_user1
+#spring.datasource.password=help7575
+#
+#logging.level.org.springframework=info
+#spring.datasource.hikari.connection-timeout=60000
+#spring.datasource.hikari.maximum-pool-size=120
+#server.port=9099
+#server.address=0.0.0.0
+##\u5F00\u542F\u5BF9AOP\u7684\u652F\u6301
+#spring.aop.auto=true
+##\u8BBE\u7F6E\u4EE3\u7406\u6A21\u5F0F true\uFF08cglib\uFF09 false(java JDK\u4EE3\u7406)
+#spring.aop.proxy-target-class=true
+#scheduled.cron=0 0/30 * * * ?
+#mybatis.mapper-locations = classpath:mapper/*.xml
+##mybatis.mapper-locations = classpath:com/*/model/*.xml
+#mybatis.config-location = classpath:mybatis-config.xml
+##mybatis.type-aliases-package = com.*.model
+##spring.jpa.hibernate.ddl-auto = update
+##spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
