--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -19,7 +19,7 @@
 #sap3.bat=E:\\CE_Automation_Reports\\Scripts\\SAP\\4.3\\4_3.bat
 #sap3.trigger=\\\\sgsi2w0126\\QV_China_1618\\DataStore\\Local_Data_CE\\1_Manual\\4.3 Exposure approval matrix mapping tool\\\u89E6\u53D1\u6587\u4EF6.txt
 #sap3.update.sql=
-
+#
 sap.path=E:\\4.3_4.4_temp\\sap44\\Back_Order.txt
 blank.path=E:\\4.3_4.4_temp\\sap44\\blank.xlsx
 trigger.path=E:\\4.3_4.4_temp\\sap44\\trigger.xlsx
@@ -39,7 +39,7 @@ sap3.py.sales.mapping=E:\\4.3_4.4_temp\\sap43\\py_sales_mapping.xlsx
 sap3.sigma=E:\\4.3_4.4_temp\\sap43\\Sigma\u4FE1\u63A7\u8D1F\u8D23\u533A\u57DF.xlsx
 sap3.zcop.aging=E:\\4.3_4.4_temp\\sap43\\ZCOP Aging.xlsx
 sap3.scoring=E:\\4.3_4.4_temp\\sap43\\\u6253\u5206\u60C5\u51B5.xlsx
-sap3.ordeing=E:\\4.3_4.4_temp\\sap43\\\u653E\u5355\u5EFA\u8BAE.xlsx
+sap3.ordeing=E:\\4.3_4.4_temp\\sap43\\ggb\\\u653E\u5355\u5EFA\u8BAE.xlsx
 sap3.trigger=E:\\4.3_4.4_temp\\sap43\\\u89E6\u53D1\u6587\u4EF6.txt
 sap3.release.order.exclude.po=E:\\4.3_4.4_temp\\sap43\\release order exclude po.xlsx
 sap3.export.path=E:\\4.3_4.4_temp\\target43\\
